--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABCs of CSS Technology</title>
+    <title>Assignment 2</title>
     <link rel="stylesheet" href="./css/sytle.css">
 </head>
 <body>
     <div class="container">
-        <!-- Titles at the top -->
+
         <div class="header">
             <div class="title-box">
                 <h1>Welcome to the Interactive ABCs of CSS technology Learning Website</h1>
@@ -17,8 +17,7 @@
                 <h2>Click on the buttons below to reveal and learn the CSS Technology features of the corresponding letters</h2>
             </div>
         </div>
-        
-        <!-- Photo display area -->
+
         <div class="photos">
             <div class="photo" id="photoA">
                 <img src="./assets/css-letter-a.png" alt="Photo A">
@@ -31,7 +30,7 @@
             </div>
         </div>
 
-        <!-- Buttons at the bottom -->
+
         <div class="buttons">
             <div class="button-box">
                 <button id="btnA" class="photo-btn">A</button>
